test-suite/tests/ui/states/not_method_assert.stderr
error: only methods can assert or reject states
 --> tests/ui/states/not_method_assert.rs:8:21
  |
8 |     #[stated(assert(A))]
  |                     ^
